Continue Pipe fittings

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2057,14 +2057,14 @@
 <p class="itemText"><p class="p1"><span class="s1">A Piping and Instrumentation Diagram (P&amp;amp;ID) is a schematic diagram that that uses symbols to show the components of a piping system and how the are connected together. <span class="Apple-converted-space">  </span>P&amp;amp;IDs are used for...</p>
 </li>
 <li>
-<p class="folderTitle">Pipe, Tubes and Fittings</p>
+<p class="folderTitle">Pipe and Tubes</p>
 </li>
 <hr class="afterTitle"/>
 <ul>
 <li>
 <p class="itemTitle">introduction</p>
-<p class="itemText">Both pipes and tubes are long, hollow structures but the distinction between them is somewhat unclear.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Pipes are primarily used for fluid transport and are almost always cylindrical.<span class="Apple-converted-space">  </span>They are sized in terms of a Nominal Pipe Size (NPS) or Nominal Diameter (DN), which corresponds to the approximate inside diameter (ID). The internal diameter is the critical dimension for fluid flow, since it is needed to calculate pipe capacity, flow rates, and frictional losses.<span class="Apple-converted-space">  </span>Additionally, pipes must have s...</p>
+<p class="itemText">In industry, pipe and tube are nearly interchangeable terms. Both describe long hollow cylinders of uniform material with a certain amount of rigidity and permanence.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Pipes are primarily used for fluid transport and are almost always cylindrical.<span class="Apple-converted-space">  </span>Generally, pipe and pipe fittings are sized in terms of a Nominal Pipe Size (NPS) or Nominal Diameter (DN), which corresponds to the approximate inside diameter (ID). The internal diameter is the critical dimension for fluid flow, since it is needed to...</p>
 </li>
 <li>
 <p class="folderTitle">Pipe Materials</p>
@@ -2159,8 +2159,9 @@
 <p class="itemText"><p class="p1"><span class="s1">Solder is an alloy that melts at 840 F or less.<span class="Apple-converted-space">  </span>Solder is composed primarily of tin, mixed with other metals such as nickel for added strength. Solder used to be a tin/lead mixture, but that is no longer u...</p>
 </li>
 <li>
-<p class="folderTitle">Compression Fittings</p>
-<p class="itemText">Compression fittings consist of a nut and a ferrule that are tightened onto the pipe, compressing the ferrule against the pipe and creating a seal.</p>
+<p class="folderTitle">Compression Connections</p>
+<p class="itemText">In some systems, mechanically strong, leak tight connections can by compressing the pipe or tube in a compression or flare fitting.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Compression fittings are made up of three basic elements: the compression nut , the ferrule , and the body.<span class="Apple-converted-space">  </span>The tubing is slipped through the nut and the ferrule and then inserted into the end of the body.<span class="Apple-converted-space">  </span>By tightening the nut/screw the ferrule is forced into the fitting body. As the ferrule<span class="Apple-converted-space">  </span>moves axially into the fitting body, the body’s angled shape compresses...</p>
 </li>
 <li>
 <p class="folderTitle">Quick Connect Fittings</p>
@@ -2180,50 +2181,74 @@
 <hr class="afterText"/>
 
 <li>
-<p class="folderTitle">Threaded Pipe Fittings</p>
+<p class="folderTitle">Pipe Fittings</p>
 </li>
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTextStart">&lt;figure xml:id="fig_pipe_fittings"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Pipe Fittings &lt;/caption&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/piping_systems/pipe_fittings.png"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ mostly from www.jmesales.com<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemTitle">introduction</p>
+<p class="itemText">Pipe fittings are the parts used to join pipe sections together with other system components like valves and pumps to build complete piping systems.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">As discussed in &lt;xref ref="pipe-connections"/&gt;, pipe fittings may be welded,<span class="Apple-converted-space">  </span>threaded, mechanically joined, or chemically adhered, to name the most common mechanisms, depending on the material of the pipe.<span class="Apple-converted-space">  </span>Some of the most common pipe fittings are described in the following sections.<span class="Apple-converted-space">  </span>The photos show threaded iron fittings, but similar fittings ar...</p>
+</li>
+<li>
+<p class="folderTitle">Pipe Nipples</p>
+<p class="itemText">Pipe nipples are short sections of pipe with male threads on both ends. The are used to connect two female threaded pipe fittings.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_nipples" &gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Nipples: Close, Short, Hex, Long<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/piping_systems/nipples.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ https://www.wallpaperflare.com/man-worker-sparks-metallurgical-welding-welder-mask-protection-wallpaper-gathq/download/1920x1080<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Close nipples are the shortest practical p...</p>
+</li>
+<li>
+<p class="folderTitle">Unions and Couplings</p>
+<p class="itemText">Couplings and unions are both pipe fittings used to join two pipes or nipples together, but they are used in different situations. Couplings are used to make a permanent connections, while unions are used to permit the system to be taken apart for maintenance from time to time.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_coupling_union" &gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;<span class="Apple-converted-space">  </span>Coupling and Union<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%" source="pics/piping_systems/coupling_union.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ https://www.wallpaperflare.com/man-worker-sparks-metall...</p>
+</li>
+<li>
+<p class="folderTitle">Elbow Fittings</p>
+<p class="itemText">A pipe elbow is a fitting used to join two sections of straight pipes at an angle. <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_elbows" &gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Elbows: 90&lt;degree/&gt;, 45&lt;degree/&gt;, 22.5&lt;degree/&gt;, Street Ell, Reducing Ell<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="100%" source="pics/piping_systems/elbows.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ https://www.wallpaperflare.com/man-worker-sparks-metallurgical-welding-welder-mask-protection-wallpaper-gathq/download/1920x1080<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Standard elbows are available in 90&lt;degree/&gt;<span class="Apple-converted-space">  </span>, 4...</p>
+</li>
+<li>
+<p class="folderTitle">Tee Fittings</p>
+<p class="itemText">Tee fittings are used to connect three sections of pipe at right angles, and are often used to make a branch line.<span class="Apple-converted-space">  </span>Cross fittings are similar, but connect four pipe sections <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_tee_cross" &gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Tee and Cross<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%" source="pics/piping_systems/tee_cross.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ https://www.wallpaperflare.com/man-worker-sparks-metallurgical-welding-welder-mask-protection-wallpaper-gathq/download/1920x1080<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Standard Tee...</p>
+</li>
+<li>
+<p class="folderTitle">Caps and Plugs</p>
+<p class="itemText">Caps and plugs are pipe fittings used to seal the end of a section of pipe.<span class="Apple-converted-space">  </span>Caps are female threaded and plugs are male threaded.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_cap_plug" &gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Cap and Plug<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="50%" source="pics/piping_systems/cap_plug.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ https://www.wallpaperflare.com/man-worker-sparks-metallurgical-welding-welder-mask-protection-wallpaper-gathq/download/1920x1080<span class="Apple-converted-space">  </span>]]&gt;&lt;/remix&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
 <li>
-<p class="itemTitle">Pipe Nipples</p>
-<p class="itemText">Pipe nipples are short sections of pipe with male threads on both ends. The are used to connect two female threaded pipe fittings.. <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Close nipples (a) are the shortest practical pipe nipple. The are used to connect two fittings very close to one another, leaving no unthreaded pipe exposed. Close or nipples are difficult to work with because the threads will be damaged with a pipe wrench, and the are difficult to remove without damage.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Short or shoulder nipples (b) are longer than close nipples ...</p>
-</li>
-<li>
-<p class="itemTitle">Unions and Couplings</p>
-<p class="itemText">Couplings and unions are both pipe fittings used to join two pipes or nipples, but they are used in different situations. A coupling is used to make a permanent connection, while a union is used when the connection that can be separated for maintenance from time to time.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A coupling is a simple, short section of pipe with internal female threads.<span class="Apple-converted-space">  </span>Two sections of pipe are tightened into the coupling to make the connection.<span class="Apple-converted-space">  </span>In order to disassemble the connection, one of the pipes needs to be rota...</p>
-</li>
-<li>
-<p class="itemTitle">Elbow Fittings</p>
-<p class="itemText">A pipe elbow is a fitting used to join two sections of straight pipes at an angle. <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Standard elbows are available in 90° (e) , 45° (f) and less commonly 22.5° (g) angles.<span class="Apple-converted-space">  </span>A 90° Ell is also called a quarter-bend.<span class="Apple-converted-space">   </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Standard elbows fit the same size pipe and female threads on both ends.<span class="Apple-converted-space">  </span>When one end is smaller than the other the fitting is called a reducing elbow (h), and when one end has male threads the fitting is called a street elbow (i).</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Short radius elbows have a radius of curvature of a...</p>
-</li>
-<li>
-<p class="itemTitle">Tee Fittings</p>
-<p class="itemText">Tee fittings are used to connect three sections of pipe at right angles, and are often used to make a branch line.<span class="Apple-converted-space">  </span>Cross fittings are similar, but connect four pipe sections <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Standard Tees and Crosses use female threads and all connections are the same size, but unequal (reducing) and street (one male thread) varieties are sometimes available.</p>
-</li>
-<li>
-<p class="itemTitle">Caps and Plugs</p>
-<p class="itemText">Caps and plugs are pipe fittings used to seal the end of a section of pipe.<span class="Apple-converted-space">  </span>Caps are female threaded and plugs are male threaded.</p>
-</li>
-<li>
-<p class="itemTitle">Adapter fittings</p>
-<p class="itemText">Adapter fittings are used to connect components that have different sizes or thread forms together, for example: parallel to taper thread adapters, pipe to hose adapters</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Reducing adapters, as the name suggests are used to connect pipes of different sizes.<span class="Apple-converted-space">  </span>A straight reducer has female threads on both ends, while a straight reducing bushing has a large male thread and a smaller female thread.<span class="Apple-converted-space">  </span>Other reducing adapters including reducing elbow and tees are available with different combinations of ...</p>
+<p class="folderTitle">Adapters</p>
+<p class="itemText">Adapter fittings are used to connect components that have different threads, diameters or connection methods together, for example: straight to taper thread adapters, pipe to hose adapters,&lt;etc/&gt;.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_adapters" &gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; Adapters:<span class="Apple-converted-space">  </span>NPT to straight, NPT to Flare Fitting, NPT to copper pipe<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="80%" source="pics/piping_systems/adapters.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt; &lt;![CDATA[ https://www.wallpaperflare.com/man-worker-sparks-metallurgical-welding-welder-mask-protection-wallpa...</p>
 </li>
 </ul>
 </ul>
