Update CLI to 2.0.1

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2156,7 +2156,14 @@
 <li>
 <p class="folderTitle">Soldered and Brazed Connections</p>
 <p class="itemText">Soldering and Brazing are both processes in which two parts are joined together using a molten filler metal.<span class="Apple-converted-space">  </span>After the filler material solidifies, a strong bond if formed. The difference between soldering and brazing has to do with the filler material, particularly its melting temperature. <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Solder is an alloy that melts at 840 F or less.<span class="Apple-converted-space">  </span>Solder is composed primarily of tin, mixed with other metals such as nickel for added strength. Solder used to be a tin/lead mixture, but that is no longer u...</p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Soldering Copper Pipe&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="60%" source="pics/piping_systems/sweat_joint.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[<span class="Apple-converted-space">  </span>Home Depot ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Solder is an alloy that melts ...</p>
 </li>
 <li>
 <p class="folderTitle">Compression Connections</p>
@@ -2166,9 +2173,11 @@
 <li>
 <p class="folderTitle">Quick Connect Fittings</p>
 <p class="itemText">Quick-connect fittings, also called a push fittings, are coupling used to provide a fast connections to hoses and flexible tubing, without the need for tools.<span class="Apple-converted-space">  </span>Some quick-connect fittings are self-sealing, so that upon disconnection they will automatically contain any fluid in the line.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">There are several types of quick connect fittings. Some of the most commonly used ones are:</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Push-to-connect fittings function by pushing one end into the other. To disconnect, a collar needs to be retracted.<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Cam...</p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Camlock, Push-to-connect, Twistlock&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image width="90%" source="pics/piping_systems/quick_connect_fittings.png"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ camlockcoupling.org,<span class="Apple-converted-space">  </span>homedepot.com, zoro.com ]]&gt;&lt;/rem...</p>
 </li>
 <li>
 <p class="folderTitle">Glued Connections</p>
@@ -2616,10 +2625,11 @@
 
 <li>
 <p class="folderTitle">Piping and Instrumentation Diagrams</p>
-<p class="itemText"></span></p></p>
+<p class="itemText">TBD</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">A<span class="Apple-converted-space">  </span>P&amp;amp;ID, which stands for "Piping and Instrumentation Diagram," is a detailed schematic diagram that represents a process system using graphical symbols to show the piping, equipment, instrumentation, and control devices involved.<span class="Apple-converted-space">  </span>P&amp;amp;IDs are commonly used in various industries, including chemical processing, petrochemical, pharmaceutical, power generation, and many others. They serve several important purposes:</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">1. **Process Visualization:**<span class="Apple-converted-space">  </span>P&amp;amp;IDs provide a visual representation of...</p>
+<p class="itemText"><p class="p1"><span class="s1">1. **Process Visualization:**<span class="Apple-converted-space">  </span>P&amp;amp;IDs provide a visual representatio...</p>
 </li>
 <hr class="afterText"/>
 <ul>
