Add Ship Description

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2625,16 +2625,31 @@
 
 <li>
 <p class="folderTitle">Piping and Instrumentation Diagrams</p>
-<p class="itemText">TBD</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">A<span class="Apple-converted-space">  </span>P&amp;amp;ID, which stands for "Piping and Instrumentation Diagram," is a detailed schematic diagram that represents a process system using graphical symbols to show the piping, equipment, instrumentation, and control devices involved.<span class="Apple-converted-space">  </span>P&amp;amp;IDs are commonly used in various industries, including chemical processing, petrochemical, pharmaceutical, power generation, and many others. They serve several important purposes:</span></p></p>
-<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
-<p class="itemText"><p class="p1"><span class="s1">1. **Process Visualization:**<span class="Apple-converted-space">  </span>P&amp;amp;IDs provide a visual representatio...</p>
 </li>
-<hr class="afterText"/>
+<hr class="afterTitle"/>
 <ul>
 <li>
+<p class="itemTitle">Introduction</p>
+<p class="itemText">A<span class="Apple-converted-space">  </span>P&amp;amp;ID, which stands for "Piping and Instrumentation Diagram," is a detailed schematic diagram that represents a process system using graphical symbols to show the piping, equipment, instrumentation, and control devices involved.<span class="Apple-converted-space">  </span>P&amp;amp;IDs are commonly used in various industries, including chemical processing, petrochemical, pharmaceutical, power generation, and many others. They serve several important purposes:</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">1. **Process Visualization:**<span class="Apple-converted-space">  </span>P&amp;amp;IDs provide a visual representation of ...</p>
+</li>
+<li>
 <p class="itemTitle">Symbols</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="pics/piping_systems/pipe_symbols_1"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ MARAD ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="pics/piping_systems/pipe_symbols_2"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ MARAD ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="pics/piping_systems/pipe_symbols_3"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ MARAD ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="pics/piping_systems/pipe_symbols_4"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ MARAD ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
 <li>
 <p class="itemTitle">Open and Closed Systems</p>
@@ -3101,7 +3116,9 @@
 <hr class="afterTitle"/>
 <ul>
 <li>
-<p class="itemTitle">Vessel Particulars</p>
+<p class="itemTitle">Ship Description</p>
+<p class="itemText">The Patriot State II<span class="Apple-converted-space">  </span>is the second of five National Security Multi-mission Vessels (NSMV) S5-ME-155a class vessels built for the U.S. Department of Transportation’s Maritime Administration (MARAD).<span class="Apple-converted-space">  </span>The ship has dual missions:<span class="Apple-converted-space">  </span>its is primarily a modern platform for training future Merchant Marine Officers, and is also an available government resource to provide Humanitarian Assistance end Disaster Relief (HA/DR) where and when it is needed.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The NSMVs are passenger-type vessel with capacity for...</p>
 </li>
 <li>
 <p class="itemTitle">Chapter 14 - MMA Sea Term I</p>
