Update dimensions and capacities

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -3117,8 +3117,9 @@
 <ul>
 <li>
 <p class="itemTitle">Ship Description</p>
-<p class="itemText">The Patriot State II<span class="Apple-converted-space">  </span>is the second of five National Security Multi-mission Vessels (NSMV) S5-ME-155a class vessels built for the U.S. Department of Transportation’s Maritime Administration (MARAD).<span class="Apple-converted-space">  </span>The ship has dual missions:<span class="Apple-converted-space">  </span>its is primarily a modern platform for training future Merchant Marine Officers, and is also an available government resource to provide Humanitarian Assistance end Disaster Relief (HA/DR) where and when it is needed.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The NSMVs are passenger-type vessel with capacity for...</p>
+<p class="itemText">The Patriot State II<span class="Apple-converted-space">  </span>is the second of five National Security Multi-mission Vessels (NSMV) S5-ME-155a class vessels built for the U.S. Department of Transportation’s Maritime Administration (MARAD). <span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The ship has dual missions:<span class="Apple-converted-space">  </span>its primary mission is to provide a modern platform for training future Merchant Marine Officers, additionally, she is also an available government resource to provide Humanitarian Assistance end Disaster Relief (HA/DR) where and when needed.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The NSMVs are passenger-typ...</p>
 </li>
 <li>
 <p class="itemTitle">Chapter 14 - MMA Sea Term I</p>
