Add main engine drawing and ship rendering

--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -2671,7 +2671,8 @@
 <ul>
 <li>
 <p class="folderTitle">Combustion Engines</p>
-<p class="itemText">TBD</p>
+<p class="itemText">TBD</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
 </li>
 <li>
 <p class="folderTitle">Gas vs. Diesel Engines and<span class="Apple-converted-space">  </span>Otto vs. Diesel Cycle</p>
@@ -3118,17 +3119,40 @@
 <li>
 <p class="itemTitle">Ship Description</p>
 <p class="itemText">The Patriot State II<span class="Apple-converted-space">  </span>is the second of five National Security Multi-mission Vessels (NSMV) S5-ME-155a class vessels built for the U.S. Department of Transportation’s Maritime Administration (MARAD). <span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The ship has dual missions:<span class="Apple-converted-space">  </span>its primary mission is to provide a modern platform for training future Merchant Marine Officers, additionally, she is also an available government resource to provide Humanitarian Assistance end Disaster Relief (HA/DR) where and when needed.</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">The NSMVs are passenger-typ...</p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="nsmv_rendering"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; NSMV Rendering&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="pics/TSPS/nsmv_model.png" width="75%"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ https://www.maritime.dot.gov/sites/marad.dot.gov/files/images/NSMV%20Model%20V12_7_6%20Forward%20Port%20Cloudy.png ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The ship has ...</p>
 </li>
 <li>
-<p class="itemTitle">Chapter 14 - MMA Sea Term I</p>
+<p class="folderTitle">Principle Dimensions</p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;table xml:id="principle_dimensions"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;title&gt;Principle Dimensions&lt;/title&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;tabular&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;row header="no"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt;Length, overall&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt;160 m&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt;(525 ft)&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;/row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">           </span>&lt;row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt;Beam&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; 27 m&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt;(89 ft) &lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;/row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;row&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt;Depth,<span class="Apple-converted-space">  </span>to main deck &lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; 16.8 m&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt;(55 ft)&lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">     </span>...</p>
 </li>
 <li>
-<p class="itemTitle">What to expect on the training cruise</p>
-</li>
-<li>
-<p class="itemTitle">System diagrams</p>
+<p class="folderTitle">Deck Plans</p>
 <p class="itemText"></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_waterline_profile" landscape="yes"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt; &lt;em&gt;Patriot State&lt;/em&gt;<span class="Apple-converted-space">  </span>Waterline Profile<span class="Apple-converted-space">  </span>&lt;/caption&gt;</span></p></p>
@@ -3145,6 +3169,37 @@
 <p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="fig_inboard_po...</p>
+</li>
+<li>
+<p class="folderTitle">Main Engines</p>
+<p class="itemText">Turbocharged, 4-stroke, single acting, trunk piston, non-reversible, direct fuel injection</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="main_engine_generator" landscape="yes"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Main Engine and Generator<br></p>
+<p class="itemText"></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>&lt;/caption&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;image source="pics/TSPS/wabtec_engine_generator"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;remix&gt;&lt;![CDATA[ DV651M001-R5-MAIN GENERATOR ENGINE.pdf ]]&gt;&lt;/remix&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/image&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;/figure&gt;</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"><span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;table xml:id="main_engine_info"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;title&gt;<span class="Apple-converted-space">  </span>&lt;/title&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;tabular&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;row header="yes"&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; Manufacturer &lt;/cell&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; GE Wabte...</p>
+</li>
+<li>
+<p class="folderTitle">Ship's History</p>
+<p class="itemText">Construction History:<span class="Apple-converted-space">  </span>design started, keel laid, ship launched, ship delivered, first cruise,$300 million cost, Philly shipyard, TOTE services.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"></p>
+</li>
+<li>
+<p class="itemTitle">Chapter 14 - MMA Sea Term I</p>
+</li>
+<li>
+<p class="itemTitle">What to expect on the training cruise</p>
 </li>
 </ul>
 </ul>
