--- a/Scrivener/IME.scriv/QuickLook/Preview.html
+++ b/Scrivener/IME.scriv/QuickLook/Preview.html
@@ -92,7 +92,7 @@
 <p class="itemText">&lt;frontmatter xml:id="frontmatter"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;titlepage&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;author&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;personname&gt;Engineering Departement&lt;/personname&gt;</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;personname&gt;Massachusetts Maritime Academy&lt;/personname&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;department&gt;Engineering Department&lt;/department&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">          </span>&lt;institution&gt;Massachusetts Maritime Academy&lt;/institution&gt;<span class="Apple-converted-space"> </span></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">       </span>&lt;/author&gt;<span class="Apple-converted-space"> </span></span></p></p>
@@ -843,8 +843,8 @@
 <ul>
 <li>
 <p class="itemTitle">introduction</p>
-<p class="itemText"> &lt;em&gt;Adapted from Principles of Naval Engineering&lt;/em&gt;The process of generating steam is basically simple. You boil water and continue to add heat until the water turns into steam. But how can this steam cause a ship to move through the water? How can steam provide power for steering, ventilation, refrigeration, distillation of seawater, and all the other needs of the vessel?<span class="Apple-converted-space"> </span></span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">Steam does not do any of these things directly. But some of the thermal energy contained in the steam can be converted i...</p>
+<p class="itemText"> &lt;em&gt;Adapted from Principles of Naval Engineering&lt;/em&gt; The process of generating steam is basically simple. You boil water and continue to add heat until the water turns into steam. But how can this steam cause a ship to move through the water? How can steam provide power for steering, ventilation, refrigeration, distillation of seawater, and all the other needs of the vessel?<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Steam does not do any of these things directly. But some of the thermal energy contained in the steam can be converted ...</p>
 </li>
 <li>
 <p class="folderTitle">Force</p>
@@ -3175,7 +3175,7 @@
 <p class="itemText">Turbocharged, 4-stroke, single acting, trunk piston, non-reversible, direct fuel injection</span></p></p>
 <p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;figure xml:id="main_engine_generator" landscape="yes"&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Main Engine and Generator<br></p>
+<p class="itemText"><p class="p1"><span class="s1">&lt;caption&gt;Main Engine and Generator <br></p>
 <p class="itemText"></span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space"> </span>&lt;/caption&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">&lt;image source="pics/TSPS/wabtec_engine_generator"&gt;</span></p></p>
@@ -3188,7 +3188,7 @@
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;tabular&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;row header="yes"&gt;</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; Manufacturer &lt;/cell&gt;</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; GE Wabte...</p>
+<p class="itemText"><p class="p1"><span class="s1"><span class="Apple-converted-space">            </span>&lt;cell&gt; GE Wabt...</p>
 </li>
 <li>
 <p class="folderTitle">Ship's History</p>
